fix links overflowing divs

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,6 +29,11 @@ body {
 
 a {
     color: #2274A5;
+    white-space: pre-wrap;   
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 h1 {
